<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--二维码扫描-->
        <cn.bingoogolapple.qrcode.zxing.ZXingView
            android:id="@+id/zxingview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:qrcv_animTime="1000"
            app:qrcv_borderColor="@color/transparent"
            app:qrcv_borderSize="1dp"
            app:qrcv_cornerColor="#FF06D89A"
            app:qrcv_cornerDisplayType="center"
            app:qrcv_cornerLength="60dp"
            app:qrcv_cornerSize="2dp"
            app:qrcv_isAutoZoom="true"
            app:qrcv_isOnlyDecodeScanBoxArea="false"
            app:qrcv_isScanLineReverse="true"
            app:qrcv_isShowLocationPoint="true"
            app:qrcv_isTipTextBelowRect="true"
            app:qrcv_maskColor="@color/transparent"
            app:qrcv_rectWidth="288dp"
            app:qrcv_scanLineColor="#FF06D89A"
            app:qrcv_scanLineSize="2dp"
            app:qrcv_toolbarHeight="0dp"
            app:qrcv_topOffset="100dp"
            app:qrcv_verticalBias="0.4" />

        <!--状态栏-->
        <FrameLayout
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--标题栏-->
        <com.watayouxiang.androidutils.widget.titlebar.WtTitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusBar"
            app:tb_background="@color/transparent"
            app:tb_isLightMode="false"
            app:tb_tvRight_text="相册"
            app:tb_tvRight_textColor="@color/white"
            app:tb_tvTitle_text="扫一扫" />

        <!--提示-->
        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="将二维码对准框内，即可自动扫描"
            android:textColor="#F1F1F1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/dp_40"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/tv_myQRCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/btn_scan_myma"
                android:drawablePadding="8dp"
                android:text="@string/myqrcode"
                android:layout_marginLeft="@dimen/dp_30"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />
            <!--闪光灯-->
            <TextView
                android:id="@+id/tv_flashlight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/openshanguangdeng"
                android:layout_marginBottom="@dimen/dp_30"
                android:gravity="center"
                android:textColor="#FF06D89A"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_myQRCode" />
            <TextView
                android:id="@+id/xiangce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/btn_scan_album"
                android:drawablePadding="8dp"
                android:text="@string/xiangce"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/dp_38"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
