<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/qr_bg">

        <!--状态栏-->
        <FrameLayout
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/statusBar"
            android:src="@drawable/bg_myma"
            />
        <!--二维码区块-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_qrcode"
            android:layout_width="match_parent"
            android:layout_height="555dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_85"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/shape_round_white_bg2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--中间背景-->
            <androidx.cardview.widget.CardView
                android:id="@+id/bg_center"
                android:layout_width="wrap_content"
                android:layout_height="384dp"
                android:layout_marginTop="92dp"
                android:layout_marginBottom="54dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--头像-->
            <com.watayouxiang.androidutils.widget.imageview.TioImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundAsCircle="true" />

            <!--昵称-->
            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxWidth="200dp"
                android:singleLine="true"
                android:text="李俞"
                android:textColor="#333333"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="@id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

            <TextView
                android:id="@+id/tv_zhanghao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                tools:text="账号：11111111"
                android:textColor="@color/gray_999999"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nick" />
            <!--二维码-->
            <ImageView
                android:id="@+id/iv_myQRCode"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_zhanghao" />
            <com.watayouxiang.androidutils.widget.imageview.TioImageView
                android:id="@+id/my_avator"
                android:layout_width="39dp"
                android:layout_height="39dp"
                app:roundedCornerRadius="2dp"
                app:roundAsCircle="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/iv_myQRCode"
                app:layout_constraintEnd_toEndOf="@id/iv_myQRCode"
                app:layout_constraintTop_toTopOf="@id/iv_myQRCode"
                app:layout_constraintBottom_toBottomOf="@id/iv_myQRCode"
                app:roundingBorderWidth="@dimen/dp_2"
                app:roundingBorderColor="@color/white"
                />
            <!--提示-->
            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_scan_add_friend"
                android:textColor="#FFB3B3B3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_myQRCode" />

            <!--下载-->
            <TextView
                android:id="@+id/tv_download"
                android:layout_width="195dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_16"
                android:drawableLeft="@drawable/download"
                android:paddingLeft="@dimen/dp_60"
                android:drawablePadding="@dimen/dp_12"
                android:text="@string/download"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="@drawable/shape_com_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--标题栏-->
<!--        <com.watayouxiang.androidutils.widget.titlebar.WtTitleBar-->
<!--            android:id="@+id/titleBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:tb_background="@color/transparent"-->
<!--            app:tb_isLightMode="false"-->
<!--            app:tb_tvTitle_text="我的二维码" />-->
<!--        app:tb_ivRight_src="@drawable/qrcode_ic_scan"-->
        <!--标题栏-->
        <com.watayouxiang.androidutils.widget.titlebar.WtTitleBarTwo
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tb_background="@color/transparent"
            app:tb_isLightMode="false"
            app:tb_tvTitle_text="@string/myqrcode" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
